fix(input): Fix input errors CSS to properly display.
Due to a CSS property that was not restrictive enough, standard
error messages were hidden by default.

Restrict CSS to components with the `md-auto-hide` class.

Also, remove the `md-maxlength` requirement from the errors demo
to reduce confusion.

Fixes #5837. References #5321.

Closes #6298

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -250,8 +250,18 @@ md-input-container {
     }
   }
 
+  // Note: This is a workaround to fix an ng-enter flicker bug
+  .md-auto-hide {
+    .md-input-message-animation {
+      &:not(.ng-animate) {
+        opacity: 0;
+        margin-top: -100px;
+      }
+    }
+  }
+
   .md-input-message-animation {
-    &.ng-enter, &:not(.ng-animate) {
+    &.ng-enter {
       opacity: 0;
       margin-top: -100px;
     }
